# portable-dlmalloc

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  cleanup.bat  compchk_uefix64.bat  compchk_win11x64.bat  compchk_win7x64.bat  compfre_uefix64.bat  compfre_win11x64.bat  compfre_win7x64.bat  export.def  license.txt  malloc.c  port_uefi.c  port_win.c  readme_crate.md  sample.c
rust-sample/: Cargo.toml  build.rs
rust-sample/src/: linux.rs  main.rs  win.rs
src/: alt_alloc.rs  lib.rs  raw.rs
